--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
 readme = "README.md"
-packages = [{include = "schudule_bot"}]
+packages = [{include = "example_bot"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
